problem with overflow hidden fixed

--- a/public/stylesheets/menu.scss
+++ b/public/stylesheets/menu.scss
@@ -342,7 +342,7 @@ html {
                             bottom: 0;
                             padding-left: 70px;
                             margin: 105px 0 105px 0;
-                            overflow-y: auto;
+                            overflow-y: auto !important;
                             height: 70%;
                             li {
                                 margin-top: 25px;
